# bmcweb

./: .clang-format  .clang-tidy  .upstream-base-commit  README.md  Redfish.md  bmcweb_config.h.in  meson.build  meson.options  meson_options.txt  pam-webserver  run-ci  sonar-project.properties
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build.yml  codeql.yml  coverity.yaml  rebase.yml  sonarcloud.yml
config/: bmcweb.service.in  bmcweb_config.h.in  meson.build
event-listener/: meson.build
event-listener/include/: elog_entry.hpp
event-listener/service_file/: meson.build  redfishevent-listener.service
event-listener/src/: elog_entry.cpp  listener.cpp  meson.build
http/: LICENSE  app.hpp  complete_response_fields.hpp  http2_connection.hpp  http_body.hpp  http_client.hpp  http_connection.hpp  http_file_body.hpp  http_request.hpp  http_response.hpp  http_server.hpp  http_stream.hpp  logging.hpp  mutual_tls.hpp  otel.cpp  otel.hpp  routing.hpp  server_sent_event.hpp  utility.hpp  verb.hpp  websocket.hpp
http/routing/: baserule.hpp  dynamicrule.hpp  ruleparametertraits.hpp  sserule.hpp  streamingresponserule.hpp  taggedrule.hpp  websocketrule.hpp
include/: asn1.hpp  async_resolve.hpp  authentication.hpp  authorization.hpp  cors_preflight.hpp  dbus_monitor.cpp  dbus_monitor.hpp  dbus_privileges.hpp  dbus_singleton.hpp  dbus_utility.hpp  debug_token.hpp  debug_token_utility.hpp  dot.hpp  dump_offload.hpp  event_service_store.hpp  file_watcher.hpp  gzip_helper.hpp  hostname_monitor.cpp  hostname_monitor.hpp  http_utility.hpp  image_upload.cpp  image_upload.hpp  kvm_websocket.hpp  login_routes.hpp  lsp.hpp  manual_boot.hpp  multipart_parser.hpp  nbd_proxy.cpp  nbd_proxy.hpp  obmc_console.hpp  openbmc_dbus_rest.cpp  openbmc_dbus_rest.hpp  pam_authenticate.hpp  persistent_data.hpp  random.hpp  sessions.hpp  ssl_key_handler.hpp  systemd_utils.hpp  temporary_file_handle.hpp  type_id.hpp  (+5 more)
include/debug_token/: base.hpp  endpoint.hpp  request_utils.hpp  status_utils.hpp  targeted_operation.hpp
include/google/: google_service_root.cpp  google_service_root.hpp
include/ibm/: locks.hpp  management_console_rest.cpp  management_console_rest.hpp
include/ut/: certs.hpp  file_watcher_test.cpp  ssl_key_handler_test.cpp
redfish-core/include/: aggregation_utils.hpp  error_messages.hpp  event_service_manager.hpp  filter_expr_parser_ast.hpp  filter_expr_parser_grammar.hpp  gzfile.hpp  nvidia_messages.hpp  privileges.hpp  query.hpp  redfish.cpp  redfish.hpp  redfish_aggregator.hpp  registries.hpp  registries_selector.hpp  schemas.hpp  server_sent_events.hpp  snmp_trap_event_clients.hpp  task_messages.hpp  update_messages.hpp
redfish-core/include/registries/: base_message_registry.hpp  bios_attribute_registry.hpp  openbmc.json  openbmc_message_registry.hpp  privilege_registry.hpp  resource_event_message_registry.hpp  task_event_message_registry.hpp  update_event_message_registry.hpp
redfish-core/include/registries/oem/: nvidia.json  nvidia_message_registry.hpp
redfish-core/include/utils/: chassis_utils.hpp  collection.hpp  conditions_utils.hpp  cpu_diag.hpp  dbus_log_utils.hpp  dbus_utils.hpp  environment_util.hpp  file_utils.hpp  finalizer.hpp  fw_utils.hpp  health_utils.hpp  hex_utils.hpp  istmode_utils.hpp  json_utils.hpp  log_services_util.hpp  mctp_utils.hpp  metric_report_definition_utils.hpp  metric_report_utils.hpp  nvidia_async_call_utils.hpp  nvidia_async_set_callbacks.hpp  nvidia_async_set_utils.hpp  nvidia_cable_util.hpp  nvidia_chassis_util.hpp  nvidia_control_utils.hpp  nvidia_fabric_utils.hpp  nvidia_manager_utils.hpp  nvidia_pcie_utils.hpp  nvidia_power_supply_utils.hpp  nvidia_processor_utils.hpp  nvidia_systems_util.hpp  origin_utils.hpp  pcie_util.hpp  port_utils.hpp  privilege_utils.hpp  processor_utils.hpp  query_param.hpp  registry_utils.hpp  stl_utils.hpp  sw_utils.hpp  telemetry_utils.hpp  (+1 more)
redfish-core/lib/: account_service.cpp  account_service.hpp  aggregation_service.cpp  aggregation_service.hpp  assembly.hpp  background_copy.hpp  bios.cpp  bios.hpp  boot_options.hpp  cable.cpp  cable.hpp  certificate_service.cpp  certificate_service.hpp  chassis.cpp  chassis.hpp  commit_image.hpp  commit_image_values_manager.hpp  component_integrity.hpp  control.hpp  cpu_diag.hpp  debug_policy.hpp  environment_metrics.cpp  environment_metrics.hpp  erot_chassis.hpp  ethernet.cpp  ethernet.hpp  ethernet_structs.hpp  event_service.cpp  event_service.hpp  eventservice_sse.cpp  eventservice_sse.hpp  fabric.hpp  fabric_adapters.cpp  fabric_adapters.hpp  fan.cpp  fan.hpp  health.hpp  host_interface.hpp  hypervisor_system.cpp  hypervisor_system.hpp  (+86 more)
redfish-core/src/: error_messages.cpp  filter_expr_parser.cpp  filter_expr_printer.cpp  query.cpp  redfish.cpp  registries.cpp  registries_selector.cpp
redfish-core/src/utils/: json_utils.cpp  time_utils.cpp
redfish-core/ut/: dbus_log_utils_test.cpp  event_service_test.cpp  health_rollup_test.cpp  registry_utils_test.cpp
scripts/: generate_schema_enums.py  headers.py  parse_registries.py  update_schemas.py
src/: boost_asio.cpp  json_html_serializer.cpp  log_exporer.cpp  redfish_client_main.cpp  run.cpp  systemd_utils.cpp  webserver_main.cpp  webserver_run.cpp
static/redfish/v1/$metadata/: index.xml
static/redfish/v1/JsonSchemas/: index.json
static/redfish/v1/schema/: AggregationService_v1.xml  AggregationSource_v1.xml  Cable_v1.xml  Chassis_v1.xml  ComponentIntegrityCollection_v1.xml  ComponentIntegrity_v1.xml  ComputerSystem_v1.xml  Drive_v1.xml  (+22 more)
test/http/: http2_connection_test.cpp  http_connection_test.cpp  http_response_test.cpp  utility_test.cpp
test/include/: credential_pipe_test.cpp  http_utility_test.cpp  multipart_test.cpp  type_id_test.cpp
test/include/ibm/: lock_test.cpp
test/redfish-core/include/: filter_expr_parser_test.cpp  redfish_aggregator_test.cpp  registries_test.cpp
test/redfish-core/lib/: log_services_dump_test.cpp  log_services_test.cpp  power_subsystem_test.cpp  sensors_test.cpp  service_root_test.cpp  thermal_subsystem_test.cpp  update_service_test.cpp
(+49 files in other folders)
