option(
    'yocto-deps',
    type: 'feature',
    value: 'disabled',
    description: 'Use YOCTO dependencies system'
)

option(
    'kvm',
    type: 'feature',
    value: 'enabled',
    description: '''Enable the KVM host video WebSocket.  Path is /kvm/0.
                    Video is from the BMCs /dev/videodevice.'''
)

option(
    'tests',
    type: 'feature',
    value: 'enabled',
    description: 'Enable Unit tests for bmcweb'
)

option(
    'vm-websocket',
    type: 'feature',
    value: 'enabled',
    description: '''Enable the Virtual Media WebSocket. Path is /vm/0/0 to
                    open the websocket. See
                    https://github.com/openbmc/jsnbd/blob/master/README.'''
)

option(
    'platform-metrics',
    type : 'feature',
    value : 'enabled',
    description :
    'Enable/disable the platform metrics to collect all sensors reading'
)

option(
    'shmem-platform-metrics',
    type : 'feature',
    value : 'disabled',
    description :
    'Enable/disable the platform metrics to collect all sensors reading over shared memory'
)

# if you use this option and are seeing this comment, please comment here:
# https://github.com/openbmc/bmcweb/issues/188 and put forward your intentions
# for this code.  At this point, no daemon has been upstreamed that implements
# this interface, so for the moment this appears to be dead code;  In leiu of
# removing it, it has been disabled to try to give those that use it the
# opportunity to upstream their backend implementation
#option(
#    'vm-nbdproxy',
#    type: 'feature', value: 'disabled',
#    description: 'Enable the Virtual Media WebSocket.'
#)

option('rmedia', type: 'feature', value : 'enabled', description : 'Enable the Rmedia Redfish API.')
option(
    'rest',
    type: 'feature',
    value: 'disabled',
    description: '''Enable Phosphor REST (D-Bus) APIs. Paths directly map
                    Phosphor D-Bus object paths, for example,
                    /xyz/openbmc_project/logging/entry/enumerate. See
                    https://github.com/openbmc/docs/blob/master/rest-api.md.'''
)

option(
    'redfish',
    type: 'feature',
    value: 'enabled',
    description: '''Enable Redfish APIs.  Paths are under /redfish/v1/. See
                    https://github.com/openbmc/bmcweb/blob/master/DEVELOPING.md#redfish.'''
)

option(
    'host-serial-socket',
    type: 'feature',
    value: 'enabled',
    description: '''Enable host serial console WebSocket. Path is /console0.
                    See https://github.com/openbmc/docs/blob/master/console.md.'''
)

option(
    'static-hosting',
    type: 'feature',
    value: 'enabled',
    description: '''Enable serving files from the /usr/share/www directory
                    as paths under /.'''
)

option(
    'redfish-bmc-journal',
    type: 'feature',
    value: 'enabled',
    description: '''Enable BMC journal access through Redfish. Paths are under
                    /redfish/v1/Managers/bmc/LogServices/Journal.'''
)

option(
    'redfish-cpu-log',
    type: 'feature',
    value: 'disabled',
    description: '''Enable CPU log service transactions through Redfish. Paths
                    are under /redfish/v1/Systems/system/LogServices/Crashdump'.'''
)

option(
    'redfish-dump-log',
    type: 'feature',
    value: 'disabled',
    description: '''Enable Dump log service transactions through Redfish. Paths
                   are under /redfish/v1/Systems/system/LogServices/Dump
                   and /redfish/v1/Managers/bmc/LogServices/Dump'''
)

option(
    'redfish-fdr-log',
    type: 'feature',
    value: 'disabled',
    description: '''Enable FDR log service transactions through Redfish. Paths
                   are under /redfish/v1/Systems/bmc/LogServices/FDR'''
)

option(
    'redfish-dbus-log',
    type: 'feature',
    value: 'disabled',
    description: '''Enable DBUS log service transactions through Redfish. Paths
                    are under
                    /redfish/v1/Systems/system/LogServices/EventLog/Entries'''
)

option(
    'redfish-host-logger',
    type: 'feature',
    value: 'enabled',
    description: '''Enable host log service transactions based on
                    phosphor-hostlogger through Redfish.  Paths are under
                    /redfish/v1/Systems/system/LogServices/HostLogger'''
)
option('redfish-dbus-event', type : 'feature', value : 'disabled', description : 'Enable Redfish event service pushes based on DBUS signals of DBUS log service transactions.')
option(
    'redfish-enable-proccessor-memory-status',
    type: 'feature',
    value: 'enabled',
    description: '''Enable/disable the deprecated processor and memory summary
                    status. The default condition is disabling the processor
                    and memory summary status. This option will be removed in
                    1Q 2024.'''
)

option(
    'redfish-provisioning-feature',
    type: 'feature',
    value: 'disabled',
    description: '''Enable provisioning feature support in redfish. Paths are
                    under /redfish/v1/Systems/system/'''
)

option(
    'bmcweb-logging',
    type: 'combo',
    choices : [ 'disabled', 'enabled', 'debug', 'info', 'warning', 'error', 'critical' ],
    value: 'disabled',
    description: '''Enable output the extended logging level.
                    - disabled: disable bmcweb log traces.
                    - enabled: treated as 'debug'
                    - For the other logging level option, see DEVELOPING.md.'''
)

option(
    'basic-auth',
    type: 'feature',
    value: 'enabled',
    description: 'Enable basic authentication'
)

option(
    'session-auth',
    type: 'feature',
    value: 'enabled',
    description: 'Enable session authentication'
)

option(
    'xtoken-auth',
    type: 'feature',
    value: 'enabled',
    description: 'Enable xtoken authentication'
)

option(
    'cookie-auth',
    type: 'feature',
    value: 'enabled',
    description: 'Enable cookie authentication'
)

option('array-bootprogress', type : 'feature', value : 'disabled', description : '''Enable array of bootprogress to take the post events as 9-byte number''')
option ('bmcweb-logging-log-level', type : 'integer', min : 0, max : 4, value : 3, description : 'log level for bmcweb logging. Default is 3(Error and above). Enum Mapping Debug = 0, Info = 1, Warning = 2, Error = 3, Critical =4.')
option(
    'mutual-tls-auth',
    type: 'feature',
    value: 'enabled',
    description: '''Enables authenticating users through TLS client
                    certificates. The insecure-disable-ssl must be disabled for
                    this option to take effect.'''
)

option(
    'ibm-management-console',
    type: 'feature',
    value: 'disabled',
    description: '''Enable the IBM management console specific functionality.
                    Paths are under /ibm/v1/'''
)

option(
    'google-api',
    type: 'feature',
    value: 'disabled',
    description: '''Enable the Google specific functionality. Paths are under
                    /google/v1/'''
)

option(
    'http-body-limit',
    type: 'integer',
    min: 0,
    max: 512,
    value: 30,
    description: 'Specifies the http request body length limit'
)

option('firmware-image-limit', type: 'integer', min : 0, max : 512, value : 30, description : 'Specifies the firmware image size limit')

option(
    'redfish-new-powersubsystem-thermalsubsystem',
    type: 'feature',
    value: 'disabled',
    description: '''Enable/disable the new PowerSubsystem, ThermalSubsystem,
                    and all children schemas. This includes displaying all
                    sensors in the SensorCollection. At a later date, this
                    feature will be defaulted to enabled.'''
)

option(
    'redfish-allow-deprecated-power-thermal',
    type: 'feature',
    value: 'enabled',
    description: '''Enable/disable the old Power / Thermal. The default
                    condition is allowing the old Power / Thermal.'''
)

option(
    'redfish-post-to-old-updateservice',
    type: 'feature',
    value: 'enabled',
    description: '''Allows POST to /redfish/v1/UpdateService, counter to
                    the redfish specification.  Option provided to allow
                    potential users to move away from using this endpoint.
                    Option will be removed Q4 2022.'''
)

option(
    'redfish-oem-manager-fan-data',
    type: 'feature',
    value: 'enabled',
    description: '''Enables Redfish OEM fan data on the manager resource.
                    This includes PID and Stepwise controller data. See
                    OemManager schema for more detail.'''
)

option(
    'redfish-health-populate',
    type: 'feature',
    value: 'enabled',
    description: '''Enables HealthPopulate and generate the Status property for
                    the resource. This option will be removed Q1 2024'''
)

option(
    'https_port',
    type: 'integer',
    min: 1,
    max: 65535,
    value: 443,
    description: 'HTTPS Port number.'
)

option(
    'dns-resolver',
    type: 'combo',
    choices: ['systemd-dbus', 'asio'],
    value: 'systemd-dbus',
    description: '''Sets which DNS resolver backend should be used.
    systemd-dbus uses the Systemd ResolveHostname on dbus, but requires dbus
    support.  asio relies on boost::asio::tcp::resolver, but cannot resolve
    names when boost threading is disabled.'''
)

option(
    'redfish-aggregation',
    type: 'feature',
    value: 'disabled',
    description: 'Allows this BMC to aggregate resources from satellite BMCs'
)

option('power-control-type-percentage', type : 'feature', value : 'disabled', description : 'set power control SetPointUnits to percentage.')
option ('redfish-aggregation-prefix', type : 'string', value : '5B247A', description : 'redfish aggregation prefix')
option('health-rollup-alternative', type : 'feature', value : 'disabled', description : 'Enable health rollup alternative with support of xyz.openbmc_project.State.Decorator.Health interface and health_rollup association.')
option('nvidia-oem-properties', type : 'feature', value : 'disabled', description : 'Enable OEM properties.')
option('nvidia-oem-logservices', type : 'feature', value : 'disabled', description : 'Enable OEM log services.')
option('nvidia-oem-bf-properties', type : 'feature', value : 'disabled', description : 'Enable OEM Bluefield properties')
option('nvidia-oem-bf3-properties', type : 'feature', value : 'disabled', description : 'Enable OEM Bluefield 3 properties')
option('nvidia-oem-oberon-properties', type : 'feature', value : 'disabled', description : 'Enable OEM Oberon properties')
option('nvidia-oem-common-properties', type : 'feature', value : 'disabled', description : 'Enable OEM Nvidia common properties.')
option ('stalesensor-upper-limit-milisecond', type : 'integer', min : 1, max : 65535, value : 750, description : 'Upper limit in miliseconds to determine the staleness of sensor reading')
option ('platform-metrics-sensing-interval', type : 'integer', min : 1, max : 65535, value : 250, description : 'Platform metrics telemetry sensor refresh interval in milliseconds')
option ('platform-system-id', type : 'string', value : 'system', description : 'Platform specific computer system id')
option ('platform-system-description', type : 'string', value : 'Computer System', description : 'Platform specific computer system description')
option ('platform-bmc-id', type : 'string', value : 'bmc', description : 'Platform specific managers bmc id')
option ('platform-network-adapter', type : 'string', value : 'networkadapter', description : 'Platform network adapter')
option ('network-adapters', type : 'feature', value : 'disabled', description : 'Enable NetworkAdapters')
option ('network-adapters-generic', type : 'feature', value : 'disabled', description : 'Enable Generic NetworkAdapters')
option ('platform-total-power-sensor-name', type : 'string', value : 'TotalHSC_Power', description : 'Platform specific total power sensor name, which has system power watts readings')
option ('platform-power-control-sensor-name', type : 'string', value : 'total_power', description : 'Platform specific total power control sensor name, which has system current power watts readings')
option ('platform-metrics-id', type : 'string', value : 'PlatformMetrics', description : 'Platform specific telemetry service metric reports id')
option ('platform-device-prefix', type : 'string', value : '', description : 'Platform specific device name prefix')
option ('platform-gpu-name-prefix', type : 'string', value : 'GPU_SXM_', description : 'Platform specific GPU name prefix')
option ('platform-chassis-name', type : 'string', value : 'HGX_Chassis_0', description : 'Platform specific chassis name')

option ('tls-auth-opt-in', type : 'feature', value : 'disabled', description : 'Enables feature to opt-in to TLS-Authentication at runtime.')
option ('host-os-features', type : 'feature', value : 'enabled', description : 'Enables feature specific to host os.')
option ('host-auxpower-features', type : 'feature', value : 'disabled', description : 'disabled feature specific to host aux power.')
option ('redfish-system-faultlog-dump-log', type : 'feature', value : 'disabled', description : 'Enable Redfish System faultlog dump log services.')
option ('reset-bios-by-clear-nonvolatile', type : 'feature', value : 'disabled', description : 'Enable using DBUS xyz.openbmc_project.Control.Boot.ClearNonVolatileVariables for Bios.ResetBios action.')
option ('fencing-privilege', type : 'feature', value : 'disabled', description : 'Enables feature to set/unset the fencing privilege to satelite BMC.')
option ('dot-support', type : 'feature', value : 'disabled', description : 'Enables DOT token support.')
option ('debug-interface-support', type : 'feature', value : 'disabled', description : 'Enables debug interface support.')
option(
    'experimental-redfish-multi-computer-system',
    type: 'feature',
    value: 'disabled',
    description: '''This is a temporary option flag for staging the
    ComputerSystemCollection transition to multi-host.  It, as well as the code
    still beneath it will be removed on 9/1/2023.  Do not enable in a
    production environment, or where API stability is required.'''
)

option(
    'experimental-http2',
    type: 'feature',
    value: 'disabled',
    description: '''Enable HTTP/2 protocol support using nghttp2.  Do not rely
                    on this option for any production systems.  It may have
                    behavior changes or be removed at any time.'''
)
option ('manual-boot-mode-support', type : 'feature', value : 'disabled', description : 'Enables support for ERoT manual boot mode')

# Insecure options. Every option that starts with a `insecure` flag should
# not be enabled by default for any platform, unless the author fully comprehends
# the implications of doing so.In general, enabling these options will cause security
# problems of varying degrees

option(
    'insecure-disable-csrf',
    type: 'feature',
    value: 'disabled',
    description: '''Disable CSRF prevention checks.Should be set to false for
                    production systems.'''
)

option(
    'insecure-disable-ssl',
    type: 'feature',
    value: 'disabled',
    description: '''Disable SSL ports. Should be set to false for production
                    systems.'''
)

option(
    'insecure-disable-auth',
    type: 'feature',
    value: 'disabled',
    description: '''Disable authentication and authoriztion on all ports.
                    Should be set to false for production systems.'''
)

option(
    'insecure-disable-xss',
    type: 'feature',
    value: 'disabled',
    description: 'Disable XSS preventions'
)

option(
    'insecure-tftp-update',
    type: 'feature',
    value: 'disabled',
    description: '''Enable TFTP based firmware update transactions through
                    Redfish UpdateService.   SimpleUpdate.'''
)

option(
    'scp-update',
    type: 'feature',
    value: 'disabled',
    description: '''Enable SCP based firmware update transactions through
                    Redfish UpdateService.SimpleUpdate.'''
)
option(
    'insecure-ignore-content-type',
    type: 'feature',
    value: 'enabled',
    description: '''Allows parsing PUT/POST/PATCH content as JSON regardless
                    of the presence of the content-type header.  Enabling this
                    conflicts with the input parsing guidelines, but may be
                    required to support old clients that may not set the
                    Content-Type header on payloads.'''
)

option(
    'insecure-push-style-notification',
    type: 'feature',
    value: 'disabled',
    description: 'Enable HTTP push style eventing feature'
)

option(
    'force-insecure-event-notification',
    type: 'feature',
    value: 'disabled',
    description: 'Event notification is performed only by http insecure protol regardless the subscription either http or https'
)

option(
    'insecure-enable-redfish-query',
    type: 'feature',
    value: 'disabled',
    description: '''Enables Redfish expand query parameter.  This feature is
                    experimental, and has not been tested against the full
                    limits of user-facing behavior.  It is not recommended to
                    enable on production systems at this time.  Other query
                    parameters such as only are not controlled by this option.'''
)

option ('update-service-task-timeout', type : 'integer', min : 5, max : 300, value : 60, description : 'Update service task timeout')
option ('update-service-image-location', type : 'string', value : '/tmp/images/', description : 'Update service image location')
option ('update-service-stage-location', type : 'string', value : '', description : 'Update service stage location')

option('redfish-new-powersubsystem', type : 'feature', value : 'enabled', description : 'Enable/disable the new Power sub system.')

option ('build-description-file-path', type : 'string', value : '/etc/os-release', description : 'Path to file containing build description BUILD_DESC=... data.')
option ('otp-provisioning-status-file-path', type : 'string', value : '/var/lib/otp-provisioning/status', description : 'Path to file containing OTP provisioning status.')

option('manufacturing-test', type : 'feature', value : 'disabled', description : 'Enable manufacturing test API.')
option('manufacturing-test-timeout', type : 'integer', min : 60, max : 3600, value : 300, description : 'Time limit in seconds for the manufacturing test execution')

option('host-iface', type : 'feature', value : 'disabled', description : 'Enable Host Interface schema.')
option ('host-iface-channel', type : 'string', value : 'usb0', description : 'Host interface channel name')

option ('computer-system-inventory-path', type : 'string', value : '/xyz/openbmc_project/inventory', description : 'Path to search object under inventory')
option('bios', type: 'feature', value : 'enabled', description : 'Enable the BIOS Redfish API.')
option('dpu-bios', type: 'feature', value : 'disabled', description : 'Enable the DPU BIOS Redfish API.')
option('ipmi', type : 'feature', value : 'enabled', description : 'Enable/disable ipmi feature.')
option('ntp', type : 'feature', value : 'enabled', description : 'Enable/disable ntp feature.')
option('patch-ssh', type : 'feature', value : 'enabled', description : 'Enable/disable ssh service support')
option('dhcp-configuration-update', type : 'feature', value : 'enabled', description : 'Enable/disable dhcp configuration support.')
option('nic-configuration-update', type : 'feature', value : 'enabled', description : 'Enable/disable nic configuration support.')
option('command-shell', type : 'feature', value : 'disabled', description : 'Enable/disable IPMI SOL.')
option('min-ucase-characters',
    type: 'integer',
    value: 1,
    description: 'Minimum number of upper case characters in the password',
)

option('min-lcase-characters',
    type: 'integer',
    value: 1,
    description: 'Minimum number of lower case characters in the password',
)

option('min-digits',
    type: 'integer',
    value: 1,
    description: 'Minimum number of digits in the password',
)

option('min-special-characters',
    type: 'integer',
    value: 0,
    description: 'Minimum number of special characters in the password',
)

option('min-password-length',
    type: 'integer',
    value: 7,
    description: 'Min password Length',
)

option(
    'use-efficient-expand-on-sensors',
    type: 'feature',
    value: 'disabled',
    description: 'Enable/Disable use of efficient expand on sensors collection'
)

option('gpu-index-start', type : 'integer', value : 1, description : 'The index to start GPUs from')
option ('enable-fabric-adapter', type : 'feature', value : 'disabled', description : 'Enables fabric adapter schema.')
option ('enable-sse', type : 'feature', value : 'enabled', description : 'Enables Event SSE.')
option('tls-cacert-path', type : 'string', value : '/etc/ssl/certs/authority/', description : 'CA certificate path truststore')
